[package]
name = "ring_sig_voting"
version = "0.1.0"
license.workspace = true
authors.workspace = true
homepage.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
codec = { features = ["derive"], workspace = true }
scale-info = { features = ["derive"], workspace = true }
frame = { features = ["experimental", "runtime"], workspace = true }
nazgul = { version= "2.1", default-features = false, features = ["no_std"] }
curve25519-dalek = { version = "4.1.3", default-features = false }
sha2 = { version = "0.10.9", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
# rand_chacha = { version = "0.9", default-features = false }
getrandom = { version = "0.2", default-features = false, features = ["custom"] }

# [dev-dependencies]
polkadot-sdk = { workspace = true, default-features = false, features = [
  "pallet-balances",
  "pallet-preimage"
] }

[features]
default = ["std"]
runtime-benchmarks = ["frame/runtime-benchmarks"]
std = [
  "codec/std", 
  "frame/std", 
  "scale-info/std",
  "nazgul/std",
  "getrandom/std",
  "polkadot-sdk/std",
]
